// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Base DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <Avatar
    assistiveText="Avatar image"
    imgAlt="Person Name"
    imgSrc="https://lightningdesignsystem.com/assets/images/avatar2.jpg"
    size="medium"
    title="user avatar"
    variant="user"
  />
</IconSettings>
`;

exports[`Avatar Base HTML Snapshot 1`] = `"<div><span class=\\"slds-avatar slds-avatar_circle slds-avatar_medium\\"><img alt=\\"Person Name\\" src=\\"https://lightningdesignsystem.com/assets/images/avatar2.jpg\\" title=\\"user avatar\\"/></span></div>"`;

exports[`Avatar Entity Icon DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <Avatar
    assistiveText="Account icon avatar"
    imgAlt=""
    size="medium"
    title="Avatar entity icon"
    variant="entity"
  />
</IconSettings>
`;

exports[`Avatar Entity Icon HTML Snapshot 1`] = `
"<div><span class=\\"slds-avatar slds-avatar_medium\\"><span class=\\"slds-icon_container slds-icon-standard-account\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#account\\"></use></svg><span class=\\"slds-assistive-text\\">Account icon avatar</span></span>
  </span>
</div>"
`;

exports[`Avatar Entity Initials DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <Avatar
    imgAlt=""
    label="Acme Communications"
    size="medium"
    title="user avatar"
    variant="entity"
  />
</IconSettings>
`;

exports[`Avatar Entity Initials HTML Snapshot 1`] = `"<div><span class=\\"slds-avatar slds-avatar_medium\\"><abbr class=\\"slds-avatar__initials slds-icon-standard-account\\" title=\\"Acme Communications\\">AC</abbr></span></div>"`;

exports[`Avatar User Icon DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <Avatar
    assistiveText="User Icon Avatar"
    imgAlt=""
    size="medium"
    title="User Icon Avatar"
    variant="user"
  />
</IconSettings>
`;

exports[`Avatar User Icon HTML Snapshot 1`] = `
"<div><span class=\\"slds-avatar slds-avatar_circle slds-avatar_medium\\"><span class=\\"slds-icon_container slds-icon-standard-user\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon\\"><use xlink:href=\\"/assets/icons/standard-sprite/svg/symbols.svg#user\\"></use></svg><span class=\\"slds-assistive-text\\">User Icon Avatar</span></span>
  </span>
</div>"
`;

exports[`Avatar User Initials DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <Avatar
    imgAlt=""
    label="Annie Wilson"
    size="medium"
    title="user avatar"
    variant="user"
  />
</IconSettings>
`;

exports[`Avatar User Initials HTML Snapshot 1`] = `"<div><span class=\\"slds-avatar slds-avatar_circle slds-avatar_medium\\"><abbr class=\\"slds-avatar__initials slds-icon-standard-user\\" title=\\"Annie Wilson\\">AW</abbr></span></div>"`;
